--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -893,7 +893,7 @@
 // Height Specific Styles
 .preview__content[data-height="5"],
 .preview__content[data-height^="5."],
-.preview__content[data-height="6"]
+.preview__content[data-height="6"],
 .preview__content[data-height^="6."] {
   .shipping-mark__logo-img { height: 40px; }
   .shipping-mark__sku { 
