--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -916,3 +916,14 @@
 .hidden {
   display: none;
 }
+
+#custom_source {
+  margin-top: 12px;
+}
+
+.instructions {
+  font-size: 90%;
+  margin-top: 8px;
+  opacity: 0.5;
+  font-style: italic;
+}
